# omglang

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  OMG_SPEC.md  PARSING_THEORY.MD  README.MD  README.md  THIRD_PARTY_LICENSES.txt  foo  index.html  main.py  mklang.py  oli.py  oli.spec  omg.py  omglangsyntax-0.0.1.vsix  parsergen.py  pyproject.toml  rot13.bc  run_examples.ps1  scratchpad.omg  setup.cfg  stack_vm_and_asm.omg  test.bc  test.crs  test.mkl  test.omg  test.ps1  test.txt  test2.omg  test3.omg
.claude/: settings.json
bootstrap/: build-native-toolchain.sh  build-web.sh  build.sh  bytecode.omg  compiler.omg  compiler.omgb  interpreter.omg  native-c.omg  omg-build.omg  omg.omg  omg_rt.h  package.sh  test_interpret.omg  tokenizer.omg  vm.omg  vm.omgb
bytecode/: bitwise.bc  example1.bc  hello_world.bc  omg.bc  permissions.bc  self_hosted.bc  stack_asm_vm.bc  stack_vm.bc
core/: errors.py  exceptions.py  interpreter.py  lexer.py  operations.py  parser.py
docs/: compilation-pipeline.md  personal-notes  personal-notes.md  rust-substrate.md  rust-subtrate.md
examples/: 1.omg  2.omg  3.omg  4.omg  5.omg  assignment.omg  ast_interpreter.omg  basic-misc-a.omg  bitwise.omg  donut.omg  error-examples.omg  errors.omg  example1.omg  example2.omg  example3.omg  example4.omg  example5.omg  example6.omg  file_ops.omg  hello.omg  hello_world.omg  hex_to_rgb.omg  hexrgb.omg  higher_order.omg  http_server.omg  import_modules.omg  lists-and-bools.omg  maze_solver.omg  permissions.omg  prime_sieve.omg  rot-13.omg  rot_13.omg  self_hosted.omg  stack-based-vm.omg  stack_vm_and_asm.omg  tabula-recta.omg
games/: README.md  pong.omg  rogue.omg  snake.omg  tetris.omg
grammar/: mklang.ebnf  mklang.gram  omg.ebnf  omg.tatsu  omg_grammar.ebnf  omg_grammarParser.py
mklang/: omg.py
native/: Cargo.toml  build.rs
omglang/: __init__.py  bytecode.py  compiler.py  exceptions.py  interpreter.py  lexer.py  operations.py
omglang.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package_resources/: omg.spec
plans/: 01-native-js.md  02-omgdb.md  03-omgtetris.md  04-omgschem.md  05-compiler-capacity-tracking.md  06-native-asm.md  README.md
playground/: index.html  package.json  vite.config.ts
reference/: interpreter.omg  omg.py  pyproject.toml
runtime/: Cargo.toml  README.md  build.rs  interpreter.omgb
runtime-wasm/: Cargo.toml
runtime/src/: ast.rs  bytecode.rs  compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  value.rs  vm.rs
runtime/src/vm/: builtins.rs  ops_arith.rs  ops_control.rs  ops_struct.rs  tests.rs
scripts/: __init__.py  bootstrap.ps1  cli.py  generate_docstring_headers.py  generate_project_structure.py  generate_project_tree.py  generate_third_party_licenses_file.py  interpreter.omgb  lint.py  omg2py.py  package.py  parse_binary_step.py  verify_binary.py  verify_omgb_file_bytes.py
spec/: DEVELOPMENT.md  OMG_ERRORS.md  OMG_LEXER.md  OMG_PARSER.md  OMG_SPEC.md
tests/: README.md  builtins.sh  db.sh  driver.sh  lib.sh  native-asm.sh  parity.sh  regression.sh  repl.sh  run.sh  test_and_conditionals.py  test_arithmetic_bitwise_lists.py  test_ast_interpreter_example.py  test_dictionaries.py  test_function_calls.py  test_loops_and_facts.py  test_modules.py  test_or_conditionals.py  test_scoping.py  test_self_hosted_interpreter_example.py  test_unary_ops.py
tools/: README.md  TEST.MD  edit  (+20 more)
(+237 files in other folders)
