[project]
name = "omglang"
version = "0.1.1"
description = "OMG language runtime and tools"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8",
    "pylint",
    "pytest",
    "pygls"
]

[project.scripts]
lint = "scripts.lint:main"
pkg = "scripts.package:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"