[project]
name = "omglang"
version = "0.1.2"
description = "OMG language runtime and tools"
readme = "README.MD"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8",
    "pylint",
    "pytest",
    "pygls"
]

[project.scripts]
omg-cli = "scripts.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"