[package]
name = "omg"
version = "0.2.0"
edition = "2021"
include = [
  "src/**",
  "build.rs",
  "README.md",
  "LICENSE*",
  "Cargo.toml",
]

description = "The fully self-hosted OMG language runtime: lexer, parser, bytecode compiler, stack VM, REPL, and built-in functions, all in Rust."
license = "MIT"
authors = ["Chris Rowles <christopher.rowles@outlook.com>"]
repository = "https://github.com/sentrychris/omglang"
homepage = "https://github.com/sentrychris/omglang"
documentation = "https://docs.rs/omg_runtime"
readme = "README.md"
keywords = ["language", "vm", "bytecode", "interpreter", "educational"]
categories = ["compilers", "development-tools"]


[dependencies]
once_cell = "1.19"